--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Smesher &mdash; COMING SOON by spacemesh.io</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Smesher by spacemesh.io" />
+	<meta name="keywords" content="spacemesh, blockchain, crypto, smesh, smesher, SMH" />
+	<meta name="author" content="spacemesh.io" />
 
   <!-- 
 	//////////////////////////////////////////////////////
@@ -72,12 +72,12 @@
 							<nav class="fh5co-nav" role="navigation">
 								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
 							</nav>
-							<h1>Smesher is an agent of change</h1>
-							<h2>Movement Made by <a href="http://spacemesh./io/" target="_blank">spacemesh</a></h2>
+							<h1>Agents of change</h1>
+							<h2>Made by <a href="http://spacemesh./io/" target="_blank">spacemesh</a></h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div class="col-md-12 desc">
-									<h2>Our webiste is opening soon. <br> Register to notify you when it's ready!</h2>
+									<h2>Webiste is opening soon. <br> Register to notify you when it's ready</h2>
 									<form class="form-inline" id="fh5co-header-subscribe">
 										<div class="col-md-12 col-md-offset-0">
 											<div class="form-group">
