--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 							<nav class="fh5co-nav" role="navigation">
 								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
 							</nav>
-							<h1>Agents of change</h1>
-							<h2>Made by <a href="http://spacemesh./io/" target="_blank">spacemesh</a></h2>
+							<h1>Agents of Change</h1>
+							<h2>Movement by <a href="http://spacemesh.io/" target="_blank">spacemesh</a></h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div class="col-md-12 desc">
