--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
   <!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
+	SMESHER by SPACEMESH
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
+	Website: 		http://spacemesh.io/
+	Email: 			alon@spacemesh.io
+	Twitter: 		http://twitter.com/teamspacemesh
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -99,7 +97,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="bg-cover js-fullheight" style="background-image:url(images/Nahel.jpeg);">
+		<div class="bg-cover js-fullheight" style="background-image:url(images/Game_of_Life.gif);">
 			
 		</div>
 	</div>
