--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
+	<meta property="og:site_name" content="SMESH.XYZ"/>
 	<meta property="og:description" content=""/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
@@ -68,7 +68,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
+								<div id="fh5co-logo"><a href="index.html">SMESH<strong>.xyz</strong></a></div>
 							</nav>
 							<h1>Agents of Change</h1>
 							<h2>Movement by <a href="http://spacemesh.io/" target="_blank">spacemesh</a></h2>
