Important Subscription form replace
Removed:

<input type="text" class="form-control" id="email" placeholder="Get notify by email">
												<button type="submit" class="btn btn-primary">Subscribe</button>

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 									<form class="form-inline" id="fh5co-header-subscribe">
 										<div class="col-md-12 col-md-offset-0">
 											<div class="form-group">
-												<iframe src="https://newgenesis.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
-												<button type="submit" class="btn btn-primary">Subscribe</button>
+																								<iframe src="https://newgenesis.substack.com/embed" width="480" height="80" style="border:px solid #EEE; background:transparent;" frameborder="0" scrolling="no"></iframe>
+												
 											</div>
 										</div>
 									</form>
