--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div class="col-md-12 desc">
-									<h2>SMESHER is coming soon. <br> Register to notify you when it's ready</h2>
+									<h2>SMESHER is coming soon. <br> Register below, we will notify you when it's ready</h2>
 									<ul class="fh5co-social-icons">
 										<li><a href="#"><i class="icon-twitter-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
