--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
     // default example
     simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate()
+        year: 2020,
+        month: 12,
+        day: 28
     });
 
     //jQuery example
