--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo"><a href="/buidl/index.html">SMESH<strong>.xyz</strong></a></div>
+								<div id="fh5co-logo"><a href="./buidl/index.html">SMESH<strong>.xyz</strong></a></div>
 							</nav>
 							<h1>Agents of Change</h1>
 							<h2>Movement by <a href="http://spacemesh.io/" target="_blank">spacemesh</a></h2>
