--- a/manifesto.html
+++ b/manifesto.html
@@ -3,11 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Smesher Manifesto</title>
+	<title>Smesher Manifesto</title>
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   </head>
 <html>
 <body bgcolor="black">
-  <font color="white">
+  <font color="white" font-family: 'Roboto Mono', monospace;>
 </body>
 </html>
   <body>
