--- a/manifesto.html
+++ b/manifesto.html
@@ -7,6 +7,12 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<style>
+	body {
+	  font-family: 'Roboto Mono', sans-serif;
+	  font-size: 48px;
+	}
+  </style>
   </head>
 <html>
 <body bgcolor="black">
