--- a/manifesto.html
+++ b/manifesto.html
@@ -27,7 +27,7 @@
       <div class="content">
         
 <div class="page-header">
-  <h1>Down the Rabbit-Hole</h1>
+  <h1>The SMESHERS Manifesto</h1>
 </div>
 
 <div class="row">
