--- a/manifesto.html
+++ b/manifesto.html
@@ -39,7 +39,7 @@
 <p><span style="font-weight: 400;">Rather than an ideal model or the end of history, what we actually arrived at is nothing more than a:</span><strong> working normative model applicable within a guarded locality, in a disguise of universal applicability. </strong><span style="font-weight: 400;">Which boomers then enforced on all other cultures, with their fake ideal &ldquo;scientific truth&rdquo;.&nbsp;&nbsp;</span></p>
 <p><span style="font-weight: 400;">Behind the idea of &ldquo;scientific truth&rdquo; to drive human progress lies a huge fundamental fallacy, which is doubly wrong:</span></p>
 <ol>
-<li style="font-weight: 400;"><strong>Scientism</strong><span style="font-weight: 400;">: Science can at best tell us what IS (within limits) but not what OUGHT to be. It inherently can NOT function as our moral compass. </span><strong>The way something is, not how it must be, nor how it should be.</strong><span style="font-weight: 400;"> By using science as our monolithic compass we can not possibly avoid scientific thinking from becoming something akin to ideology itself (e.g. can't avoid the </span><span style="font-weight: 400;">notion of cultural superiority to conflate with biological superiority thereby reinforcing racism).&nbsp;</span></li>
+<li style="font-weight: 400;"><strong><h2>Scientism</h2></strong><span style="font-weight: 400;">: Science can at best tell us what IS (within limits) but not what OUGHT to be. It inherently can NOT function as our moral compass. </span><strong>The way something is, not how it must be, nor how it should be.</strong><span style="font-weight: 400;"> By using science as our monolithic compass we can not possibly avoid scientific thinking from becoming something akin to ideology itself (e.g. can't avoid the </span><span style="font-weight: 400;">notion of cultural superiority to conflate with biological superiority thereby reinforcing racism).&nbsp;</span></li>
 <li style="font-weight: 400;"><strong>No Script for ethics</strong><span style="font-weight: 400;">: Even behind the very aim to script ethical living hides a false proposition: Complying with the moral imperative best achieved once moral dilemma cannot come into being to begin with. This in-turn makes every encounter with a paradox, an excuse for inaction on the merit that there is no course of action that can qualify as right. Rather than hope for progress by means of resolution it could have become&nbsp;</span></li>
 </ol>
 <blockquote>
@@ -49,7 +49,7 @@
 <p><span style="font-weight: 400;">A private clock ticking private time refusing to negotiate time determination with any other clocks, under the claim boomers private clock is ideal, perfect and true. Infecting complex patterns with artificial simplicity. Epistemology is complicated, not complex, these are 2 very different things, viewing the world from the lens of simplicity always makes things more complicated and less complex.</span></p>
 <p><span style="font-weight: 400;">Modern logic is a feedback loop that Rewards risk aversion and the exploitation of words and financial short term bottom-lines and Punishes the people of action and the value creators. A systemic weakness to act courageously toward an expansive and non-literal frame of the future. </span><span style="font-weight: 400;">This process inherently, by its very nature, by force of internal inertia, intensifies to the point of inevitable discharge and collapse of the kind we have already encountered in the 2008 crisis.</span><span style="font-weight: 400;"><br /><br /></span></p>
 <p><span style="font-weight: 400;">The war between good and evil is now in possession of stupidity and simplicity over wisdom and complexity.&nbsp;</span></p>
-<p><span style="font-weight: 400;">--------</span></p>
+<p><span style="font-weight: 400;">----------------------------</span></p>
 <p><span style="font-weight: 400;">As Smeshers, we take a <strong>life stance</strong></span><strong>&nbsp;</strong><span style="font-weight: 400;">and believe our values must lead our actions, and not their literal temporary definition.&nbsp;</span></p>
 <p><span style="font-weight: 400;">Wide aware of the human delusional tendency to place our species as the intelligence center of the universe.</span></p>
 <p><span style="font-weight: 400;">Smeshers works for humanity; we aim to recover enough cognitive function to correct the impossible mess recent civilization has created, with the demand for simplicity and order to be imposed on the complexity of our creation.&nbsp;&nbsp;</span></p>
@@ -60,10 +60,10 @@
 <p><span style="font-weight: 400;">A post-religion and post-science system must first acknowledge that no matter how smart, it will always fall short, the unknown set is never factorable.&nbsp;</span></p>
 <p><span style="font-weight: 400;">And any attempt to push decisions into specific outcomes debases their being actual decisions.&nbsp;</span></p>
 <ol>
-<li style="font-weight: 400;"><span style="font-weight: 400;">By sincerely playing the longame, using an abundance mentality, we will rapidly outcompete those obsessed with the optimum-in-isolation and quick gains.&nbsp;</span></li>
-<li style="font-weight: 400;"><span style="font-weight: 400;">We know a slice of the ball is NOT the ball, and that most everything we do has externalities.&nbsp; We know &ldquo;Consensus Reality&rdquo; is not particularly real and increasingly unstable.</span></li>
-<li style="font-weight: 400;"><span style="font-weight: 400;">We are secular yet wide aware of the transcendental operator</span></li>
-<li style="font-weight: 400;"><span style="font-weight: 400;">Enrich rather than debase the substright on which we operate, net positive &gt;&gt; How do I raise my asymmetric power to lift everyone and debase the asymmetry, we&nbsp; ARE oriented AND incentivized to do that.</span></li>
+<li style="font-weight: 400;"><span style="font-weight: 400;"> >> By sincerely playing the longame, using an abundance mentality, we will rapidly outcompete those obsessed with the optimum-in-isolation and quick gains.&nbsp;</span></li>
+<li style="font-weight: 400;"><span style="font-weight: 400;"> >> We know a slice of the ball is NOT the ball, and that most everything we do has externalities.&nbsp; We know &ldquo;Consensus Reality&rdquo; is not particularly real and increasingly unstable.</span></li>
+<li style="font-weight: 400;"><span style="font-weight: 400;"> >> We are secular yet wide aware of the transcendental operator</span></li>
+<li style="font-weight: 400;"><span style="font-weight: 400;"> >> Enrich rather than debase the substright on which we operate, net positive &gt;&gt; How do I raise my asymmetric power to lift everyone and debase the asymmetry, we&nbsp; ARE oriented AND incentivized to do that.</span></li>
 </ol>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -121,8 +121,8 @@ $(function(){
 
 			for (var j = 0; j < wordsInTextNodes[i].length; j++) {
 
-				// Only change a tenth of the words each round.
-				if (Math.random() > 1/10) {
+				// Only change a tenth of the words each round.  --AA: changed to 20
+				if (Math.random() > 1/20) {
 
 					continue;
 				}
