--- a/manifesto.html
+++ b/manifesto.html
@@ -16,7 +16,7 @@
   </head>
 <html>
 <body bgcolor="black">
-  <font color="white" font-family: 'Roboto Mono', monospace;>
+  <font color="white" font-family: 'Roboto', monospace;>
 </body>
 </html>
   <body>
