--- a/manifesto.html
+++ b/manifesto.html
@@ -121,8 +121,8 @@ $(function(){
 
 			for (var j = 0; j < wordsInTextNodes[i].length; j++) {
 
-				// Only change a tenth of the words each round.  --AA: changed to 20
-				if (Math.random() > 1/20) {
+				// Only change a tenth of the words each round.  
+				if (Math.random() > 1/10) {
 
 					continue;
 				}
