--- a/manifesto.html
+++ b/manifesto.html
@@ -7,16 +7,11 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-<style>
-	body {
-	  font-family: 'Roboto Mono', sans-serif;
-	  font-size: 48px;
-	}
-  </style>
+
   </head>
 <html>
 <body bgcolor="black">
-  <font color="green" font-family:"Roboto Mono", monospace;>
+  <font color="white" style="font-family: 'Roboto Mono', sans-serif; font-size: 48px;">
 </body>
 </html>
   <body>
