--- a/manifesto.html
+++ b/manifesto.html
@@ -11,7 +11,7 @@
   </head>
 <html>
 <body bgcolor="black">
-  <font color="white" style="font-family: 'Roboto Mono', sans-serif; font-size: 18px;">
+  <font color="white" style="font-family: 'Roboto Mono', sans-serif; font-size: 18px; padding: 35px;">
 </body>
 </html>
   <body>
