--- a/manifesto.html
+++ b/manifesto.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<title>Smesher Manifesto</title>
+	<title>Manifesto</title>
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
       <div class="content">
         
 <div class="page-header">
-  <h1>The SMESHERS Manifesto</h1>
+  <h1>//The SMESHERS Manifesto</h1>
 </div>
 
 <div class="row">
