--- a/manifesto.html
+++ b/manifesto.html
@@ -116,8 +116,8 @@ $(function(){
 
 			for (var j = 0; j < wordsInTextNodes[i].length; j++) {
 
-				// Only change a tenth of the words each round.  
-				if (Math.random() > 1/100) {
+				// Only change a tenth of the words each round.  //changed to 1/50
+				if (Math.random() > 1/50) {
 
 					continue;
 				}
