--- a/manifesto.html
+++ b/manifesto.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="span8">
 	
-	<p><span style="font-weight: 400;">We, the Weirdos, the Freaks, the Culturally Different, the Misfits, the Nonconformist, Nonrational, Mentaly ill, (and other such nicknames you'd give us).</span></p>
+	<p><span style="font-weight: 400;">We, the Weirdos, the Freaks, the Culturally Different, the Misfits, the Nonconformist, Nonrational, Mentaly ill, (and other such <p style="background-color:red;">nicknames</p> you'd give us).</span></p>
 <p style="text-align: center;"><span style="font-weight: 400;"><b>We take no offence, with you imaging yourself the center of OUR universe,<br> please take no offence with us choosing to try something else.</b></span></p>
 <p><span style="font-weight: 400;">We know boomer dudes like Fukuya or Thomas Friedman to be found flat out wrong. Boomer gave Science the power over our decision making, in every possible methodology. Simply because it allowed them to win in rivalrous contests (warfare, extraction, production, information control, narrative manipulation) left it governed only by the economics that funds it, which reifies game theory as its ethical system.</span></p>
 <p><span style="font-weight: 400;">Rather than an ideal model or the end of history, what we actually arrived at is nothing more than a:</span><strong> working normative model applicable within a guarded locality, in a disguise of universal applicability. </strong><span style="font-weight: 400;">Which boomers then enforced on all other cultures, with their fake ideal &ldquo;scientific truth&rdquo;.&nbsp;&nbsp;</span></p>
